fix: Virtual Events: Moved Big Blue Button minimize button to avoid overlap (#6337)

--- a/app/styles/components/stream.scss
+++ b/app/styles/components/stream.scss
@@ -32,7 +32,7 @@
 
 .stream-side-panel-button {
   position: fixed;
-  top: 3px;
+  top: 4.25rem;
   left: -.4rem;
   width: 32px;
   height: 50px;
@@ -41,6 +41,7 @@
     position: absolute;
     right: -.4rem;
     left: unset;
+    top: 4.25rem;
   }
 }
 
